src/objects/S12N_Account_Association__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Specializations</relationshipLabel>
        <relationshipName>S12N_Account_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SFDC_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>SFDC Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialization__c</fullName>
        <label>Specialization</label>
        <referenceTo>Specialization__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>S12N_Account_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>S12N / Account Association</label>
    <nameField>
        <label>S12N / Account Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S12N / Account Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Do_not_associate_S12N_with_inactive_IP</fullName>
        <active>true</active>
        <description>Rule to avoid association of Specialization with Industry Partner Account which is not yet Approved</description>
        <errorConditionFormula>AND(Account__r.RecordType.Name = &quot;Industry Partner&quot;, 
Account__r.Active__c = False)</errorConditionFormula>
        <errorMessage>The Industry Partner account you trying to associate with this specialization is inactive and not yet approved</errorMessage>
    </validationRules>
</CustomObject>